// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CopyNumberVariantPage with dataset gnomad_cnv_r4 with variant of type DEL has no unexpected changes 1`] = `
<div
  className="Page-sc-w7h773-0 inQCpN"
>
  <div
    className="GnomadPageHeading__PageHeadingWrapper-sc-sgz3rr-0 dvPVoX"
  >
    <div
      className="GnomadPageHeading__PageHeadingInnerWrapper-sc-sgz3rr-1 eSZnPV"
    >
      <h1
        className="GnomadPageHeading__PageHeadingText-sc-sgz3rr-3 jnCErQ"
      >
        Copy number variant: 
        21__DEL
      </h1>
    </div>
    <div
      className="GnomadPageHeading__PageControlsWrapper-sc-sgz3rr-4 djaGuB"
    >
      <span
        className="GnomadPageHeading__Label-sc-sgz3rr-5 cyEZAf"
      >
        Dataset
      </span>
      <ul
        className="DatasetSelector__NavigationMenuWrapper-sc-1p2fxbn-0 llwGeF"
      >
        <li
          className="DatasetSelector__NavigationMenuItem-sc-1p2fxbn-2 cNeMlR"
          isActive={true}
        >
          <a
            className="DatasetSelector__TopLevelNavigationLink-sc-1p2fxbn-1 iTVAby"
            data-item="current_sv_dataset"
            href="/?dataset=gnomad_cnv_r4"
            onBlur={[Function]}
            onClick={[Function]}
            onKeyDown={[Function]}
          >
            gnomAD CNVs v4.1.0
          </a>
        </li>
        <li
          className="DatasetSelector__NavigationMenuItem-sc-1p2fxbn-2 cNeMlR"
          isActive={true}
        >
          <a
            aria-expanded={false}
            aria-haspopup="true"
            aria-label="More datasets"
            className="DatasetSelector__TopLevelNavigationLink-sc-1p2fxbn-1 iTVAby"
            data-item="other_structural_variant"
            href="/"
            onBlur={[Function]}
            onClick={[Function]}
            onKeyDown={[Function]}
            role="button"
          >
            <span
              className="DatasetSelector__MoreIcon-sc-1p2fxbn-3 jpnidu"
            >
              <img
                alt=""
                aria-hidden="true"
                src="test-file-stub"
              />
            </span>
          </a>
          <ul
            className="DatasetSelector__SubNavigationMenu-sc-1p2fxbn-4 eJbUtd"
            isExpanded={false}
          >
            <li>
              <div
                className="DatasetSelector__GroupedNav-sc-1p2fxbn-7 fNWeWH"
              >
                GRCh38
              </div>
              <li>
                <a
                  className="DatasetSelector__SubNavigationLink-sc-1p2fxbn-5 fAkdhO"
                  data-item="gnomad_sv_r4"
                  href="/?dataset=gnomad_sv_r4"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onKeyDown={[Function]}
                >
                  gnomAD SVs v4.1.0
                  <div
                    className="DatasetSelector__ItemDescription-sc-1p2fxbn-6 gKTZkZ"
                  >
                    63,046 samples, genome
                  </div>
                </a>
              </li>
              <li>
                <a
                  className="DatasetSelector__SubNavigationLink-sc-1p2fxbn-5 fAkdhO"
                  data-item="gnomad_cnv_r4"
                  href="/?dataset=gnomad_cnv_r4"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onKeyDown={[Function]}
                >
                  gnomAD CNVs v4.1.0
                  <div
                    className="DatasetSelector__ItemDescription-sc-1p2fxbn-6 gKTZkZ"
                  >
                    464,297 samples, exome, rare (&lt;0.01)
                  </div>
                </a>
              </li>
            </li>
            <li>
              <div
                className="DatasetSelector__GroupedNav-sc-1p2fxbn-7 fNWeWH"
              >
                GRCh37
              </div>
              <li>
                <a
                  className="DatasetSelector__SubNavigationLink-sc-1p2fxbn-5 fAkdhO"
                  data-item="gnomad_sv_r2_1"
                  href="/?dataset=gnomad_sv_r2_1"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onKeyDown={[Function]}
                >
                  gnomAD SVs v2.1
                  <div
                    className="DatasetSelector__ItemDescription-sc-1p2fxbn-6 gKTZkZ"
                  >
                    10,847 samples, genome
                  </div>
                </a>
              </li>
              <li>
                <a
                  className="DatasetSelector__SubNavigationLink-sc-1p2fxbn-5 fAkdhO"
                  data-item="gnomad_sv_r2_1_non_neuro"
                  href="/?dataset=gnomad_sv_r2_1_non_neuro"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onKeyDown={[Function]}
                >
                  gnomAD SVs v2.1 (non-neuro)
                  <div
                    className="DatasetSelector__ItemDescription-sc-1p2fxbn-6 gKTZkZ"
                  >
                    8,342 samples, genome
                  </div>
                </a>
              </li>
              <li>
                <a
                  className="DatasetSelector__SubNavigationLink-sc-1p2fxbn-5 fAkdhO"
                  data-item="gnomad_sv_r2_1_controls"
                  href="/?dataset=gnomad_sv_r2_1_controls"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onKeyDown={[Function]}
                >
                  gnomAD SVs v2.1 (controls)
                  <div
                    className="DatasetSelector__ItemDescription-sc-1p2fxbn-6 gKTZkZ"
                  >
                    5,192 samples, genome
                  </div>
                </a>
              </li>
            </li>
          </ul>
        </li>
      </ul>
      <span>
        <button
          className="InfoButton__Button-sc-13t5e82-0 faZoWY"
          onClick={[Function]}
          type="button"
        >
          <img
            alt=""
            aria-hidden="true"
            src="test-file-stub"
          />
          <span
            style={
              {
                "border": "0",
                "clip": "rect(0 0 0 0)",
                "height": "1px",
                "margin": "-1px",
                "overflow": "hidden",
                "padding": "0",
                "position": "absolute",
                "whiteSpace": "nowrap",
                "width": "1px",
              }
            }
          >
            More information
          </span>
        </button>
      </span>
    </div>
  </div>
  <div
    className="CopyNumberVariantPage__Wrapper-sc-1ase2rg-0 kXxGpy"
  >
    <section
      className="CopyNumberVariantPage__ResponsiveSection-sc-1ase2rg-1 mrGuf"
    >
      <dl
        className="AttributeList-sc-1yjjegy-0 gnGPdi"
        style={
          {
            "marginTop": "1.25em",
          }
        }
      >
        <div>
          <dt>
            Filter
          </dt>
          <dd>
            <span
              className="Badge__BadgeWrapper-sc-j4izdp-1 fcxTLO"
              level="success"
            >
              Pass
            </span>
          </dd>
        </div>
        <div>
          <dt>
            Site Count
          </dt>
          <dd>
            123
          </dd>
        </div>
        <div>
          <dt>
            Site Number
          </dt>
          <dd>
            345
          </dd>
        </div>
        <div>
          <dt>
            Site Frequency
          </dt>
          <dd>
            0.3565
          </dd>
        </div>
        <div>
          <dt>
            Position
          </dt>
          <dd>
            <a
              className="Link-sc-14lgydv-0 jtwqlm"
              href="/region/21-123-456"
              onClick={[Function]}
            >
              21
              :
              123
              -
              456
            </a>
          </dd>
        </div>
        <div>
          <dt>
            Size
          </dt>
          <dd>
            333 bp
          </dd>
        </div>
        <div>
          <dt>
            Class
          </dt>
          <dd>
            deletion
          </dd>
        </div>
      </dl>
    </section>
    <section
      className="CopyNumberVariantPage__ResponsiveSection-sc-1ase2rg-1 mrGuf"
    >
      <h2>
        External Resources
      </h2>
      <ul
        className="List-sc-4j87st-0 dNvWYc"
      >
        <li
          className="List__ListItem-sc-4j87st-1 eQCGXh"
        >
          <a
            className="Link-sc-14lgydv-0 Link__ExternalLink-sc-14lgydv-1 jtwqlm"
            href="https://genome.ucsc.edu/cgi-bin/hgTracks?db=hg38&position=chr21%3A123-456"
            rel="noopener noreferrer"
            target="_blank"
          >
            UCSC
          </a>
        </li>
      </ul>
      <h2>
        Feedback
      </h2>
      <a
        className="Link-sc-14lgydv-0 Link__ExternalLink-sc-14lgydv-1 jtwqlm"
        href="mailto:gnomad@broadinstitute.org"
        rel="noopener noreferrer"
        target="_blank"
      >
        Report an issue with this variant
      </a>
    </section>
  </div>
  <section>
    <h2>
      Genetic Ancestry Group Frequencies
    </h2>
    <table
      className="Table__BaseTable-sc-7fgtt2-0 CNVPopulationsTable__Table-sc-1dnyyn-0 etBNab evAjCN"
    >
      <thead>
        <tr>
          <th
            aria-sort="none"
            colSpan={2}
            scope="col"
          >
            <button
              onClick={[Function]}
              type="button"
            >
              Genetic ancestry group
            </button>
          </th>
          <th
            aria-sort="none"
            className="right-align"
            scope="col"
          >
            <button
              onClick={[Function]}
              type="button"
            >
              <span
                className="TooltipHint-sc-1wwbc8j-0 cimmsD"
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
              >
                Site Count
              </span>
            </button>
          </th>
          <th
            aria-sort="none"
            className="right-align"
            scope="col"
          >
            <button
              onClick={[Function]}
              type="button"
            >
              <span
                className="TooltipHint-sc-1wwbc8j-0 cimmsD"
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
              >
                Site Number
              </span>
            </button>
          </th>
          <th
            aria-sort="descending"
            className="right-align"
            scope="col"
          >
            <button
              onClick={[Function]}
              type="button"
            >
              <span
                className="TooltipHint-sc-1wwbc8j-0 cimmsD"
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
              >
                Site Frequency
              </span>
            </button>
          </th>
        </tr>
      </thead>
      <tfoot>
        <tr
          className="border"
        >
          <th
            colSpan={2}
            scope="row"
          >
            Total
          </th>
          <td
            className="right-align"
          >
            123
          </td>
          <td
            className="right-align"
          >
            345
          </td>
          <td
            className="right-align"
          >
            0.3565
          </td>
        </tr>
      </tfoot>
    </table>
  </section>
  <div
    className="CopyNumberVariantPage__Wrapper-sc-1ase2rg-0 kXxGpy"
  >
    <section
      className="CopyNumberVariantPage__ResponsiveSection-sc-1ase2rg-1 mrGuf"
    >
      <h2>
        Consequences
      </h2>
      <p>
        This variant has consequences in 
        0
         gene
        s
        .
      </p>
    </section>
  </div>
</div>
`;

exports[`CopyNumberVariantPage with dataset gnomad_cnv_r4 with variant of type DUP has no unexpected changes 1`] = `
<div
  className="Page-sc-w7h773-0 inQCpN"
>
  <div
    className="GnomadPageHeading__PageHeadingWrapper-sc-sgz3rr-0 dvPVoX"
  >
    <div
      className="GnomadPageHeading__PageHeadingInnerWrapper-sc-sgz3rr-1 eSZnPV"
    >
      <h1
        className="GnomadPageHeading__PageHeadingText-sc-sgz3rr-3 jnCErQ"
      >
        Copy number variant: 
        21__DUP
      </h1>
    </div>
    <div
      className="GnomadPageHeading__PageControlsWrapper-sc-sgz3rr-4 djaGuB"
    >
      <span
        className="GnomadPageHeading__Label-sc-sgz3rr-5 cyEZAf"
      >
        Dataset
      </span>
      <ul
        className="DatasetSelector__NavigationMenuWrapper-sc-1p2fxbn-0 llwGeF"
      >
        <li
          className="DatasetSelector__NavigationMenuItem-sc-1p2fxbn-2 cNeMlR"
          isActive={true}
        >
          <a
            className="DatasetSelector__TopLevelNavigationLink-sc-1p2fxbn-1 iTVAby"
            data-item="current_sv_dataset"
            href="/?dataset=gnomad_cnv_r4"
            onBlur={[Function]}
            onClick={[Function]}
            onKeyDown={[Function]}
          >
            gnomAD CNVs v4.1.0
          </a>
        </li>
        <li
          className="DatasetSelector__NavigationMenuItem-sc-1p2fxbn-2 cNeMlR"
          isActive={true}
        >
          <a
            aria-expanded={false}
            aria-haspopup="true"
            aria-label="More datasets"
            className="DatasetSelector__TopLevelNavigationLink-sc-1p2fxbn-1 iTVAby"
            data-item="other_structural_variant"
            href="/"
            onBlur={[Function]}
            onClick={[Function]}
            onKeyDown={[Function]}
            role="button"
          >
            <span
              className="DatasetSelector__MoreIcon-sc-1p2fxbn-3 jpnidu"
            >
              <img
                alt=""
                aria-hidden="true"
                src="test-file-stub"
              />
            </span>
          </a>
          <ul
            className="DatasetSelector__SubNavigationMenu-sc-1p2fxbn-4 eJbUtd"
            isExpanded={false}
          >
            <li>
              <div
                className="DatasetSelector__GroupedNav-sc-1p2fxbn-7 fNWeWH"
              >
                GRCh38
              </div>
              <li>
                <a
                  className="DatasetSelector__SubNavigationLink-sc-1p2fxbn-5 fAkdhO"
                  data-item="gnomad_sv_r4"
                  href="/?dataset=gnomad_sv_r4"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onKeyDown={[Function]}
                >
                  gnomAD SVs v4.1.0
                  <div
                    className="DatasetSelector__ItemDescription-sc-1p2fxbn-6 gKTZkZ"
                  >
                    63,046 samples, genome
                  </div>
                </a>
              </li>
              <li>
                <a
                  className="DatasetSelector__SubNavigationLink-sc-1p2fxbn-5 fAkdhO"
                  data-item="gnomad_cnv_r4"
                  href="/?dataset=gnomad_cnv_r4"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onKeyDown={[Function]}
                >
                  gnomAD CNVs v4.1.0
                  <div
                    className="DatasetSelector__ItemDescription-sc-1p2fxbn-6 gKTZkZ"
                  >
                    464,297 samples, exome, rare (&lt;0.01)
                  </div>
                </a>
              </li>
            </li>
            <li>
              <div
                className="DatasetSelector__GroupedNav-sc-1p2fxbn-7 fNWeWH"
              >
                GRCh37
              </div>
              <li>
                <a
                  className="DatasetSelector__SubNavigationLink-sc-1p2fxbn-5 fAkdhO"
                  data-item="gnomad_sv_r2_1"
                  href="/?dataset=gnomad_sv_r2_1"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onKeyDown={[Function]}
                >
                  gnomAD SVs v2.1
                  <div
                    className="DatasetSelector__ItemDescription-sc-1p2fxbn-6 gKTZkZ"
                  >
                    10,847 samples, genome
                  </div>
                </a>
              </li>
              <li>
                <a
                  className="DatasetSelector__SubNavigationLink-sc-1p2fxbn-5 fAkdhO"
                  data-item="gnomad_sv_r2_1_non_neuro"
                  href="/?dataset=gnomad_sv_r2_1_non_neuro"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onKeyDown={[Function]}
                >
                  gnomAD SVs v2.1 (non-neuro)
                  <div
                    className="DatasetSelector__ItemDescription-sc-1p2fxbn-6 gKTZkZ"
                  >
                    8,342 samples, genome
                  </div>
                </a>
              </li>
              <li>
                <a
                  className="DatasetSelector__SubNavigationLink-sc-1p2fxbn-5 fAkdhO"
                  data-item="gnomad_sv_r2_1_controls"
                  href="/?dataset=gnomad_sv_r2_1_controls"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onKeyDown={[Function]}
                >
                  gnomAD SVs v2.1 (controls)
                  <div
                    className="DatasetSelector__ItemDescription-sc-1p2fxbn-6 gKTZkZ"
                  >
                    5,192 samples, genome
                  </div>
                </a>
              </li>
            </li>
          </ul>
        </li>
      </ul>
      <span>
        <button
          className="InfoButton__Button-sc-13t5e82-0 faZoWY"
          onClick={[Function]}
          type="button"
        >
          <img
            alt=""
            aria-hidden="true"
            src="test-file-stub"
          />
          <span
            style={
              {
                "border": "0",
                "clip": "rect(0 0 0 0)",
                "height": "1px",
                "margin": "-1px",
                "overflow": "hidden",
                "padding": "0",
                "position": "absolute",
                "whiteSpace": "nowrap",
                "width": "1px",
              }
            }
          >
            More information
          </span>
        </button>
      </span>
    </div>
  </div>
  <div
    className="CopyNumberVariantPage__Wrapper-sc-1ase2rg-0 kXxGpy"
  >
    <section
      className="CopyNumberVariantPage__ResponsiveSection-sc-1ase2rg-1 mrGuf"
    >
      <dl
        className="AttributeList-sc-1yjjegy-0 gnGPdi"
        style={
          {
            "marginTop": "1.25em",
          }
        }
      >
        <div>
          <dt>
            Filter
          </dt>
          <dd>
            <span
              className="Badge__BadgeWrapper-sc-j4izdp-1 fcxTLO"
              level="success"
            >
              Pass
            </span>
          </dd>
        </div>
        <div>
          <dt>
            Site Count
          </dt>
          <dd>
            123
          </dd>
        </div>
        <div>
          <dt>
            Site Number
          </dt>
          <dd>
            345
          </dd>
        </div>
        <div>
          <dt>
            Site Frequency
          </dt>
          <dd>
            0.3565
          </dd>
        </div>
        <div>
          <dt>
            Position
          </dt>
          <dd>
            <a
              className="Link-sc-14lgydv-0 jtwqlm"
              href="/region/21-123-456"
              onClick={[Function]}
            >
              21
              :
              123
              -
              456
            </a>
          </dd>
        </div>
        <div>
          <dt>
            Size
          </dt>
          <dd>
            333 bp
          </dd>
        </div>
        <div>
          <dt>
            Class
          </dt>
          <dd>
            duplication
          </dd>
        </div>
      </dl>
    </section>
    <section
      className="CopyNumberVariantPage__ResponsiveSection-sc-1ase2rg-1 mrGuf"
    >
      <h2>
        External Resources
      </h2>
      <ul
        className="List-sc-4j87st-0 dNvWYc"
      >
        <li
          className="List__ListItem-sc-4j87st-1 eQCGXh"
        >
          <a
            className="Link-sc-14lgydv-0 Link__ExternalLink-sc-14lgydv-1 jtwqlm"
            href="https://genome.ucsc.edu/cgi-bin/hgTracks?db=hg38&position=chr21%3A123-456"
            rel="noopener noreferrer"
            target="_blank"
          >
            UCSC
          </a>
        </li>
      </ul>
      <h2>
        Feedback
      </h2>
      <a
        className="Link-sc-14lgydv-0 Link__ExternalLink-sc-14lgydv-1 jtwqlm"
        href="mailto:gnomad@broadinstitute.org"
        rel="noopener noreferrer"
        target="_blank"
      >
        Report an issue with this variant
      </a>
    </section>
  </div>
  <section>
    <h2>
      Genetic Ancestry Group Frequencies
    </h2>
    <table
      className="Table__BaseTable-sc-7fgtt2-0 CNVPopulationsTable__Table-sc-1dnyyn-0 etBNab evAjCN"
    >
      <thead>
        <tr>
          <th
            aria-sort="none"
            colSpan={2}
            scope="col"
          >
            <button
              onClick={[Function]}
              type="button"
            >
              Genetic ancestry group
            </button>
          </th>
          <th
            aria-sort="none"
            className="right-align"
            scope="col"
          >
            <button
              onClick={[Function]}
              type="button"
            >
              <span
                className="TooltipHint-sc-1wwbc8j-0 cimmsD"
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
              >
                Site Count
              </span>
            </button>
          </th>
          <th
            aria-sort="none"
            className="right-align"
            scope="col"
          >
            <button
              onClick={[Function]}
              type="button"
            >
              <span
                className="TooltipHint-sc-1wwbc8j-0 cimmsD"
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
              >
                Site Number
              </span>
            </button>
          </th>
          <th
            aria-sort="descending"
            className="right-align"
            scope="col"
          >
            <button
              onClick={[Function]}
              type="button"
            >
              <span
                className="TooltipHint-sc-1wwbc8j-0 cimmsD"
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
              >
                Site Frequency
              </span>
            </button>
          </th>
        </tr>
      </thead>
      <tfoot>
        <tr
          className="border"
        >
          <th
            colSpan={2}
            scope="row"
          >
            Total
          </th>
          <td
            className="right-align"
          >
            123
          </td>
          <td
            className="right-align"
          >
            345
          </td>
          <td
            className="right-align"
          >
            0.3565
          </td>
        </tr>
      </tfoot>
    </table>
  </section>
  <div
    className="CopyNumberVariantPage__Wrapper-sc-1ase2rg-0 kXxGpy"
  >
    <section
      className="CopyNumberVariantPage__ResponsiveSection-sc-1ase2rg-1 mrGuf"
    >
      <h2>
        Consequences
      </h2>
      <p>
        This variant has consequences in 
        0
         gene
        s
        .
      </p>
    </section>
  </div>
</div>
`;
